# hw-web-10

./: README.md  pyproject.toml
quotes/quotes/: settings.py  urls.py
quotes/quotes_list/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
quotes/quotes_list/migrations/: 0001_initial.py  0002_tag_created.py  0003_alter_author_born_location.py
quotes/quotes_list/static/quotes_list/: style.css
quotes/quotes_list/templates/quotes_list/: author.html  authors.html  base.html  index.html
quotes/quotes_list/templates/quotes_list/add/: author.html  quote.html  tag.html
quotes/quotes_list/templatetags/: extract_tags.py
quotes/scraping/: urls.py  views.py
quotes/scraping/templates/scraping/: index.html
quotes/users/: forms.py  urls.py  views.py
quotes/users/templates/users/: base-sign-forms.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  signin.html  signup.html
